fixed inpur placeholder text not showing up on small screens

--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,7 @@ input {
 
 input::placeholder {
   color: #a0aec068;
+  margin-right: -100px;
   z-index: 100;
 }
 
